--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <h2>Meet Our Faculty</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
-            <img src="https://drive.google.com/uc?id=1AZqK7DP2ZSGDM_07vyaXejxl6sAi5sm5" alt="SHIVAM SONI SIR">
-            <p>Introducing our experienced faculty who are dedicated to providing quality education.</p>
+            <img src="https://drive.google.com/uc?id=1AZqK7DP2ZSGDM_07vyaXejxl6sAi5sm5" alt="SHIVAM-SONI-SIR">
+            <p>Introducing our experienced faculty who are dedicated to providing quality education.
+            Experience of teaching many students in different schools as pgt physics . teaches in very practical manner and is students favourite.</p>
         </div>
     </section>
     <!-- Other sections (Videos, Playlists, Notes) -->
