--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#playlists">Playlists</a></li>
                 <li><a href="#notes">Notes</a></li>
-                <li><a href="#newsletter">Subscribe</a></li> <!-- Added Newsletter link -->
+                <li><a href="#newsletter">Subscribe</a></li> 
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
             <!-- Faculty introduction content here -->
             <img src="https://drive.google.com/uc?id=1AZqK7DP2ZSGDM_07vyaXejxl6sAi5sm5" alt="SHIVAM-SONI-SIR">
             <p>Introducing our experienced faculty who are dedicated to providing quality education.
-            Experience of teaching many students in different schools as pgt physics . teaches in very practical manner and is students favourite.</p>
+            Experience of teaching many students in different schools as pgt physics . Teaches in very practical manner and is students favourite. </p>
         </div>
     </section>
     <!-- Other sections (Videos, Playlists, Notes) -->
