Update index.html 1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#playlists">Playlists</a></li>
                 <li><a href="#notes">Notes</a></li>
-                <li><a href="#newsletter">Subscribe</a></li> 
+                <li><a href="https://youtube.com/@vazeerclasses9993?si=xEWRwb59TfnWsk9G">Subscribe</a></li> 
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
         <h2>Meet Our Faculty</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
-            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2FjvtkWh40sxc%2Fsddefault.jpg%3Fsqp%3D-oaymwEmCIAFEOAD8quKqQMa8AEB-AH-DoACuAiKAgwIABABGHIgUCgzMA8%3D%26rs%3DAOn4CLDpUoyP2Bk7kaDpCS6b0YRghnjKqA&tbnid=EAPJM0YNeynlFM&vet=12ahUKEwionpi8xPqEAxWbhGMGHcFJC2IQMygGegQIARBf..i&imgrefurl=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCJQ8-H29fkqXdsDFrGsmVEA&docid=siEI4FgzN8jUOM&w=640&h=480&itg=1&q=vazeer%20classes&client=tablet-android-samsung-ss&ved=2ahUKEwionpi8xPqEAxWbhGMGHcFJC2IQMygGegQIARBf" alt="SHIVAM-SONI-SIR">
+            <img src="https://pin.it/4hC7Ap8vG" alt="SHIVAM SONI SIR">
             <p>Introducing our experienced faculty who are dedicated to providing quality education.
             Experience of teaching many students in different schools as pgt physics . Teaches in very practical manner and is students favourite. </p>
         </div>
