--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Meet Our Faculty</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
-            <img src="https://pin.it/4hC7Ap8vG" alt="SHIVAM SONI SIR">
+            <img src="https://github.com/Sh16coder/Image1/blob/main/sddefault.jpg" alt="SHIVAM SONI SIR">
             <p>Introducing our experienced faculty who are dedicated to providing quality education.
             Experience of teaching many students in different schools as pgt physics . Teaches in very practical manner and is students favourite. </p>
         </div>
