--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#playlists">Playlists</a></li>
                 <li><a href="#notes">Notes</a></li>
-                <li><a href="https://youtube.com/@vazeerclasses9993?si=xEWRwb59TfnWsk9G">Subscribe</a></li> 
+                <li><a href="https://youtube.com/@vazeerclasses9993">Subscribe</a></li> 
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
         <h2>Meet Our Faculty</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
-            <img src="https://github.com/Sh16coder/Image1/blob/main/sddefault.jpg" alt="SHIVAM SONI SIR">
+            <img src="https://raw.githubusercontent.com/Sh16coder/Image1/main/sddefault.jpg" alt="SHIVAM SONI SIR">
             <p>Introducing our experienced faculty who are dedicated to providing quality education.
             Experience of teaching many students in different schools as pgt physics . Teaches in very practical manner and is students favourite. </p>
         </div>
