--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#playlists">Playlists</a></li>
                 <li><a href="#notes">Notes</a></li>
-                <li><a href="https://youtube.com/@vazeerclasses9993">Subscribe</a></li> 
+                
             </ul>
+            <a href="www.youtube.com/@vazeerclasses9993"> Subscribe </a>
         </nav>
     </header>
     <section id="faculty">
         <h2>Meet Our Faculty</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
-            <img src="https://raw.githubusercontent.com/Sh16coder/Image1/main/sddefault.jpg" alt="SHIVAM SONI SIR">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NXiiULRKV3s?si=dCrgb1YgOWvT0Hjq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Introducing our experienced faculty who are dedicated to providing quality education.
             Experience of teaching many students in different schools as pgt physics . Teaches in very practical manner and is students favourite. </p>
         </div>
