--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <li><a href="#notes">Notes</a></li>
                 
             </ul>
-            <a href="www.youtube.com/@vazeerclasses9993"> Subscribe </a>
+            <a href="https://www.youtube.com/channel/vazeerclasses9993">Subscribe </a>
         </nav>
     </header>
     <section id="faculty">
         <h2>Meet Our Faculty</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/NXiiULRKV3s?si=dCrgb1YgOWvT0Hjq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NXiiULRKV3s?si=dCrgb1YgOWvT0Hjq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>SHIVAM SONI SIR</iframe>
             <p>Introducing our experienced faculty who are dedicated to providing quality education.
             Experience of teaching many students in different schools as pgt physics . Teaches in very practical manner and is students favourite. </p>
         </div>
