--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#playlists">Playlists</a></li>
                 <li><a href="#notes">Notes</a></li>
-                
+                <li><a href="https://youtube.com/@vazeerclasses9993?si=7zg2honLFv57e_ey">SUBSCRIBE</a></li>
             </ul>
-            <a href="https://www.youtube.com/channel/vazeerclasses9993">Subscribe </a>
+       
         </nav>
     </header>
     <section id="faculty">
         <h2>Meet Our Faculty</h2>
+        <h2>Shivam soni sir</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/NXiiULRKV3s?si=dCrgb1YgOWvT0Hjq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>SHIVAM SONI SIR</iframe>
