--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#playlists">Playlists</a></li>
                 <li><a href="#notes">Notes</a></li>
-                <li><a href="https://youtube.com/@vazeerclasses9993?si=7zg2honLFv57e_ey">SUBSCRIBE</a></li>
+                <a href="https://youtube.com/@vazeerclasses9993?si=7zg2honLFv57e_ey">SUBSCRIBE</a>
             </ul>
        
         </nav>
