--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <h3>Ncert | class-10th | science -Electricity | exercise Q.9|</h3>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/08pMxgH-zpk?si=ClHcx8dno_SgnWQy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <div class="video">
+                <h3>ALL VIDEOS</h3>
+                <a href="https://www.youtube.com/@vazeerclasses9993/videos">ALL VIDEOS</a>
+                
             <!-- Repeat for other videos -->
         </div>
     </section>
