--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <h2>Shivam soni sir</h2>
         <div class="faculty-intro">
             <!-- Faculty introduction content here -->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/NXiiULRKV3s?si=dCrgb1YgOWvT0Hjq" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>SHIVAM SONI SIR</iframe>
+            <img src="VAZEER CLASSES.jpg" alt="Shivam Soni sir">
             <p>Introducing our experienced faculty who are dedicated to providing quality education.
-            Experience of teaching many students in different schools as pgt physics . Teaches in very practical manner and is students favourite. </p>
+            Experience of teaching many students in different schools as pgt physics. Teaches in very practical manner and is students favourite. </p>
         </div>
     </section>
     <!-- Other sections (Videos, Playlists, Notes) -->
