Update index.html new video added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <!-- Other sections (Videos, Playlists, Notes) -->
     <section id="videos">
         <h2>Latest Videos</h2>
+        <h3>image formation by spherical mirror in one shot | Class-10th | all theory and basic concept</h3>
+                <iframe width="931" height="524" src="https://www.youtube.com/embed/GDIxJF2h16M" title="#Image formation by spherical mirror |Class-10th| Chapter -light Reflection and Refraction|#vazeersi" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
+    </div>
         <div class="video-list">
             <!-- YouTube video embeds with titles here -->
             <div class="video">
@@ -63,6 +66,8 @@
                 <h3>CLASS 12 ELECTROSTATIC</h3>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLSrxuxRGgFzRiMfcUoMHkndTwcGBo9mSl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <div class="video">
+                
             <!-- Repeat for other playlists -->
         </div>
     </section>
